portfolio wrap fixed

--- a/css/main.css
+++ b/css/main.css
@@ -677,6 +677,9 @@ img {
   }
 }
 
+.benefits__item {
+  display: flex;
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .benefits__item {
     flex-basis: calc((100% - 30px) / 2);
@@ -972,22 +975,19 @@ img {
 @media screen and (min-width: 768px) {
   .portfolio {
     display: flex;
-    gap: 30px;
     flex-wrap: wrap;
-    margin-left: -15px;
-    margin-right: -15px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .portfolio {
-    margin-left: -15px;
-    margin-right: -15px;
+    gap: 30px;
   }
 }
 
 .portfolio__item {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .portfolio__item {
+    margin-bottom: 30px;
+  }
 }
 @media screen and (min-width: 768px) {
   .portfolio__item {
