--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -13,6 +13,7 @@
 }
 
 .benefits__item {
+    display: flex;
     @media screen and (min-width:768px)and (max-width:1199px) {
         flex-basis: calc((100% - 30px) /2 );
     }
