--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,7 +1,7 @@
-.card {
-    // display: flex;
-    // flex-direction: column;
-}
+// .card {
+//     display: flex;
+//     flex-direction: column;
+// }
 
 .card__photo-wrap {
     position: relative;
@@ -34,7 +34,6 @@
 
 .card__image {
     width: 100%;
-
     flex-grow: 1;
 }
 
