--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,27 +1,23 @@
 .portfolio {
-    @media screen and (min-width:768px) {
+   @media screen and (min-width:768px) {
         display: flex;
-        gap: 30px;
         flex-wrap: wrap;
-        margin-left: -15px;
-        margin-right: -15px;
-    }
-
-    @media screen and (min-width:1200px) {
-        margin-left: -15px;
-        margin-right: -15px;    
-    }
+        gap: 30px;
+   }
 }
 
 .portfolio__item {
+    @media screen and (max-width:767px) {
+        margin-bottom: 30px;    
+    }
+
     @media screen and (min-width:768px) {
         flex-basis: calc((100% - 30px) / 2);
     }
 
     @media screen and (min-width:1200px) {
-        flex-basis: calc((100% - 60px) /3);
+        flex-basis: calc((100% - 60px) / 3);
     }
-    // margin-bottom: 30px;
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
